--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start": "if-env NODE_ENV=production ?? npm run start:prod || npm run start:dev",
-    "start:dev": "DEBUG='coinman:*' nodemon -r dotenv/config src",
+    "start:dev": "DEBUG='coinman:*' nodemon -r dotenv/config src --ignore 'src/db/*'",
     "start:prod": "node src",
+    "debug": "DEBUG='coinman:*' node -r dotenv/config --inspect-brk=9229 src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Juliano Penna <julianopenna@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "binance": "^1.3.3",
+    "cron": "^1.3.0",
     "debug": "^3.1.0",
     "dotenv": "^5.0.1",
     "if-env": "^1.0.4",
     "node-json-db": "^0.7.5",
+    "simple-node-logger": "^0.93.37",
     "telegraf": "^3.20.0"
   },
   "devDependencies": {
