--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "if-env NODE_ENV=production ?? npm run start:prod || npm run start:dev",
     "start:dev": "DEBUG='coinman:*' nodemon -r dotenv/config src --ignore 'src/db/*'",
+    "survive": "DEBUG='coinman:*' node -r dotenv/config src",
     "start:prod": "node src",
     "debug": "DEBUG='coinman:*' node -r dotenv/config --inspect-brk=9229 src",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +14,7 @@
   "author": "Juliano Penna <julianopenna@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "binance": "^1.3.3",
+    "binance": "github:laurynas-karvelis/binance",
     "cron": "^1.3.0",
     "debug": "^3.1.0",
     "dotenv": "^5.0.1",
