--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "if-env NODE_ENV=production ?? npm run start:prod || npm run start:dev",
     "start:dev": "DEBUG='coinman:*' nodemon -r dotenv/config src --ignore 'src/db/*'",
     "survive": "DEBUG='coinman:*' node -r dotenv/config src",
-    "start:prod": "node src",
+    "start:prod": "node -r dotenv/config src",
     "debug": "DEBUG='coinman:*' node -r dotenv/config --inspect-brk=9229 src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
