--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "if-env": "^1.0.4",
     "node-json-db": "^0.7.5",
     "simple-node-logger": "^0.93.37",
-    "telegraf": "^3.20.0"
+    "telegraf": "^3.20.0",
+    "ws": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
