--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "Juliano Penna <julianopenna@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "binance": "github:laurynas-karvelis/binance",
+    "binance": "github:jpenna/binance",
     "cron": "^1.3.0",
     "debug": "^3.1.0",
     "dotenv": "^5.0.1",
