--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
   "license": "ISC",
   "dependencies": {
     "binance": "github:jpenna/binance",
-    "cron": "^1.3.0",
+    "cron": "^1.4.0",
     "debug": "^3.1.0",
-    "dotenv": "^5.0.1",
+    "dotenv": "^6.0.0",
+    "gracefully-exit": "github:jpenna/gracefully-exit",
     "if-env": "^1.0.4",
     "node-json-db": "^0.7.5",
     "simple-node-logger": "^0.93.37",
-    "telegraf": "^3.20.0",
-    "ws": "^5.1.1"
+    "telegraf": "^3.22.2",
+    "ws": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.11.0",
-    "nodemon": "^1.17.3"
+    "nodemon": "^1.18.3"
   }
 }
