--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Juliano Penna <julianopenna@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "binance": "github:jpenna/binance",
     "cron": "^1.4.0",
